@@ -1,5 +1,10 @@
 2008-11-26  Mike Kestner  <mkestner@novell.com>
 
+	* bootstrap-2.12: bump svn version.
+	* cairo/Makefile.am: policy config is hard-coded, not generated.
+
+2008-11-26  Mike Kestner  <mkestner@novell.com>
+
 	* configure.in.in: prepend CFLAGS environment setting to AC_SUBST.
 	Patch from Diego Petteno.  [Fixes #443175]
 
